# rogauracore

./: .gitignore  LICENSE.md  Makefile  Makefile.am  README.md  Step by step for Ubuntu 18.04  configure.ac  rogaura.c  rogaura.py  rogauracore.c
data/: 90-rogauracore.rules
prototype/: rogauracore.py
src/: rogauracore.c
